chapters 2 and 3 stabilized and not written too horribly

--- a/mapping.tex
+++ b/mapping.tex
@@ -46,7 +46,7 @@ function
 morphism
 \end{comment}
 
-The term \emph{mapping} is used in mathematics, computer science, and related technical fields to encapsulate the concept of a \emph{function} and other related concepts under one abstraction. Like most technical terms used in multiple technical disciplines, the meaning of \emph{mapping} varies according to the context of the field that it is used. However in the case of mapping, the variation is subtle enough that a cursory understanding of the way mapping is used in a couple of contexts outside of DMIs might illuminate why it is a necessary and valuable concept to encapsulate in the context of new musical interfaces.
+The term \emph{mapping} is used in mathematics, computer science, and related technical fields to encapsulate the concept of a \emph{function} and other related concepts under one abstraction. Like most technical terms used in multiple technical disciplines, the meaning of \emph{mapping} varies according to the context of the field that it is used. However in the case of mapping, the variation is subtle enough that a cursory understanding of the way mapping is used in a couple of contexts outside of DMIs might illuminate why it is a necessary and valuable concept to encapsulate in the context of new musical interfaces and help understand what is required for an interface designed specifically for mapping.
 
 \subsection{Mappings in Mathematics}
 \label{sec:Mappings in Mathematics}
@@ -189,7 +189,7 @@ These mathematical and computer science concepts provide a solid foundation for 
 \section{Importance of Mapping in Digital Musical Instruments}
 \label{sec:Importance of Mapping}
 
-In an acoustic musical instrument, the equivalents of the "control mechanism" and "sound generation mechanism", as they are called in a DMI, are \emph{intrinsically coupled} or bound to each other because the physical material (e.g. wood, metal, horse hair) of the instrument that forms the control mechanism also forms the sound generation mechanism. Making a decision that alters the control mechanism will significantly or subtly alter the sound generation mechanism.
+In an acoustic musical instrument, the equivalents of the "control mechanism" and "sound generation mechanism", as they are called in a DMI, are \emph{intrinsically coupled} or bound to each other because the physical material (e.g. wood, metal, horse hair) of the instrument that forms the control mechanism also forms the sound generation mechanism. Making a decision that alters the control mechanism will significantly or subtly alter the sound generation mechanism. Replacing the horse hair of a violin bow with artificial fiber will result in a perceived difference in tone to the trained ear.
 
 In a DMI, the control mechanism is composed of sensors typically embedded in structural materials that form the shape of the instrument and connected to a microcontroller that provides the interface for accessing the sensor signals. The physical gestures of the performer are not coupled to the sound generation through purely mechanical means, but through electrical means. Each sensor, whether it senses acceleration, orientation, touch, etc. produces an electrical signal that correlates to some physical measurement. This analog electrical signal is converted to a digital signal through some kind of analog to digital signal conversion (perhaps within the control mechanism on an integrated microcontroller) and then this digital signal is processed by a computer and sent to the sound generation mechanism, which is a piece of software that produces audio samples.
 
@@ -376,4 +376,6 @@ Additionally, perhaps such a reframing might better work \emph{with} the pecular
 
 Imagine a MSN comprised of more than ten Libmapper-enabled devices, some of them are control devices and some are sound generation devices. Each device might output, or receive as inputs, around ten signals. So to create a mapping layer over this distributed network of devices, one might send hundreds of Mapper Protocol messages to link, unlink, connect, disconnect, etc. various pairs of devices and signals as one attempts to determine through trial and error the specific set of connections and functional transformations that best fit the particular sensors, devices, context, and design intentions of the people constructing the system. 
 
-It may be that it is unclear what control device ought to be linked to what sound generation device, much less what signals within the control device to connect to what particular signals within the sound generation device. When experimenting with a mapping layer for a specific MSN it is necessary to view the current network mapping, modify the current mapping, test the new mapping, evaluate its effectiveness and then repeat the process until the mapping is satisfactory. Any tools and interfaces that speed up this iterative process and reduce the amount of Libmapper-specific/Mapper Protocol knowledge required to efficiently explore the possibilities of a particular MSN improves the usability of Libmapper and allows for a wider diversity of skill sets and roles in a broader performance project involving instrumentalists, composers, directors, and engineers to participate in the mapping task that is so crucial to the character of a musical system. 
+It may be that it is unclear what control device ought to be linked to what sound generation device, much less what signals within the control device to connect to what particular signals within the sound generation device. When experimenting with a mapping layer for a specific MSN it is necessary to view the current network mapping, modify the current mapping, test the new mapping, evaluate its effectiveness and then repeat the process until the mapping is satisfactory. 
+
+Any tools and interfaces that speed up this iterative process and reduce the amount of Libmapper-specific/Mapper Protocol knowledge required to efficiently explore the possibilities of a particular MSN improves the usability of Libmapper and allows for a wider diversity of skill sets and roles in a broader performance project involving instrumentalists, composers, directors, and engineers to participate in the mapping task that is so crucial to the character of a musical system. 
