--- a/user_interface_and_data_visualization_design.tex
+++ b/user_interface_and_data_visualization_design.tex
@@ -210,8 +210,16 @@ dynamic queries technique
 Visual Information Seeking: Tight Coupling of Dynamic Query Filters with Starfield Displays
 \end{comment}
 
-When dealing with a data set with a high cardinality for one component or another, filtering becomes a very attractive feature for a user interface to have. 
+When dealing with a data set with a high cardinality for one component or another, filtering becomes a very attractive feature for a user interface to have. This is especially true when the goal of a user interface or data visualization is not only to improve the ability for a user to extrapolate high level integrative knowledge about the set of data, but to focus on and select specfic data for manipulation as required by the Vizmapper interface. This focus is related to data visualization, but is referred to as \emph{visual information seeking} (VIS) to distinguish it from data visualization. 
+
+Filtering, like hiearchies provides a mechanism for reducing the perceived complexity of a data set. Unlike hiearchical organization, which preserves the overall cardinality of the data set, filtering temporarily restricts to a subset within the subset that meet the parameters of the filter. Filters can be implemented graphically by using sliders, drop down menus, and other common graphical widgets or use textual queries. Hierarchical organization can itself be used as a filtering mechanism by acting as predefined set of salient queries (for example, to restrict the set of all animals to mammals from a typical hiearchical biological classification).
+
+Most of this understanding of filters in the context of VIS comes from a paper by Ahlberg and Schneiderman \cite{seeking1994}. The relevance of filters to the problem of mapping in a large MSN is best summarized as follows:
 
 \begin{quote}
-The key to these principles is understanding the enormous capacity for human visual information processing. By presenting information visually and allowing dynamic user control through direct manipulation principles, it is possible to traverse large informaiton spaces and facilitate comprehension with reduced anxiety. \cite{seeking1994}
+"The key to these principles is understanding the enormous capacity for human visual information processing. By presenting information visually and allowing dynamic user control through direct manipulation principles, it is possible to traverse large informaiton spaces and facilitate comprehension with reduced anxiety." \cite{seeking1994}
 \end{quote}
+
+The principle of \emph{tight coupling} in a user interface is of particular interest when including filtering capabilities in an interface because it makes clear the distinction between filtering and searching. Tight coupling applies to many aspects of a user interface and broadly refers to maintaining tightly coupled consistency between the state of a data visualization and any user actions that are supposed to change the state of the system. If it is possible for a user to break this consistency between the visual state of the system and the actual state of the system the user will likely be confused. Typically when searching a database the system state begins by displaying an empty set of data because no query has been made. Once a query is executed than the interface displays a subset of data (in graphical or textual form) that correspond to the elements of the entire data set that match the search query. Conversely, when filtering a data set the initial state of the system with an empty query is to display the entire set of available data and to reduce the amount of information on the screen as the query becomes more specific. The difference is admittedly subtle. However, when a user is introduced to a large data set for the first time, the filtering convention is much less confusing because it is much more disorienting to be presented with a empty set of data than it is to be presented with too much data. It is more difficult for a user to determine what the first action to take should be in the former case.
+
+The history and research reviewed in this chapter provide a solid theoretical foundation for tackling the problem of designing a user interface that involves the visualization of a large data set.
